--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'Montserrat', sans-serif;
     font-family: 'Kaushan Script', cursive;
-    background: blueviolet;
+    /* background: blueviolet; */
 
     font-size: 15px;
 }
